--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "start",
+  "name": "startt",
   "version": "1.0.0",
   "description": "Simple wrapper around starting a process in new window.",
-  "main": "start.js",
+  "main": "startt.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/thonguyen14/start.git"
+    "url": "git://github.com/stpettersens/startt.git"
   },
   "keywords": [
     "start",
@@ -18,7 +18,7 @@
   "author": "Sam Saint-Pettersen <s.stpettersen+github@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/thonguyen14/start/issues"
+    "url": "https://github.com/stpettersens/startt/issues"
   },
-  "homepage": "https://github.com/thonguyen14/start"
+  "homepage": "https://github.com/stpettersens/startt"
 }
